# where-to-go

./: .env(example)  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
locale/ru/LC_MESSAGES/: django.mo  django.po
where_to_go/: .env(example)  settings.py  urls.py  views.py
where_to_go/places/: __init__.py  admin.py  apps.py  models.py  schemas.py  tests.py  urls.py  views.py
where_to_go/places/migrations/: 0001_initial.py  0002_alter_image_options_alter_place_description_long.py
where_to_go/places/templates/: main_page.html
