[tool.poetry]
name = "where-to-go"
version = "0.1.0"
description = ""
authors = ["Artem Nechai <lenikol95@mail.ru>"]
readme = "README.md"
packages = [{include = "where_to_go"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
python-dotenv = "^0.20.0"
Pillow = "^9.2.0"
marshmallow = "^3.17.0"
django-admin-sortable2 = "^2.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
